--- a/www/templates/game.html
+++ b/www/templates/game.html
@@ -1,5 +1,25 @@
 <ion-view view-title="Game">
   <ion-content padding="true">
-
+    <div class="choice bef">
+      {{beforeChoiceOne}}
+    </div>
+    <div class="choice bef">
+      {{beforeChoiceTwo}}
+    </div>
+    <div class="choice bef">
+      {{beforeChoiceThree}}
+    </div>
+    <div class="middle-number">
+      {{middleNumber}}
+    </div>
+    <div class="choice aft">
+      {{afterChoiceOne}}
+    </div>
+    <div class="choice aft">
+      {{afterChoiceTwo}}
+    </div>
+    <div class="choice aft">
+      {{afterChoiceThree}}
+    </div>
   </ion-content>
 </ion-view>
