--- a/scss/_styles.scss
+++ b/scss/_styles.scss
@@ -1,11 +1,50 @@
 .choice {
-  font-size: 2em;
+  width: 100%;
+  font-size: 50px;
   font-weight: bold;
   color: red;
-  .bef {
-    float :left;
-  }
-  .aft {
-    float:right;
-  }
+  text-align: center;
+
+}
+
+.middle-number {
+  width: 100%;
+  font-size: 12em;
+  font-weight: bold;
+  color: red;
+  text-align: center;
+  height: 100%;
+}
+
+.body {
+    display: table;
+    height: 100%;
+    table-layout: fixed;
+}
+
+.before {
+  height: 33%;
+}
+
+.after {
+  height: 33%;
+}
+
+.left-side {
+
+    float: none;
+    display: table-cell;
+
+}
+
+.right-side {
+
+    float: none;
+    display: table-cell;
+
+}
+
+.middle {
+  padding-top: 100px;
+  display: table-cell;
 }
